literature review finished

--- a/data/bibliography/bibli.bib
+++ b/data/bibliography/bibli.bib
@@ -1,28 +1,207 @@
 %% This BibTeX bibliography file was created using BibDesk.
 %% http://bibdesk.sourceforge.net/
 
-%% Created for Shangqi at 2017-11-08 22:19:39 +1100 
+%% Created for Shangqi at 2017-11-14 22:24:34 +1100 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
 
 
 
-@misc{time2013twitter,
-	Author = {Time},
-	Date-Added = {2017-11-08 11:18:52 +0000},
-	Date-Modified = {2017-11-08 11:19:39 +0000},
-	Howpublished = {\\ \url{http://business.time.com/2013/10/08/twitter-is-selling-access-to-your-tweets-for-millions/} [online]},
-	Title = {{Twitter Is Selling Access to Your Tweets for Millions}},
+@inproceedings{de2012hummingbird,
+	Author = {De Cristofaro, Emiliano and Soriente, Claudio and Tsudik, Gene and Williams, Andrew},
+	Booktitle = {Security and Privacy (SP), 2012 IEEE Symposium on},
+	Date-Added = {2017-11-14 11:17:21 +0000},
+	Date-Modified = {2017-11-14 11:17:21 +0000},
+	Organization = {IEEE},
+	Pages = {285--299},
+	Title = {Hummingbird: Privacy at the time of twitter},
+	Year = {2012}}
+
+@article{goldreich1996software,
+	Author = {Goldreich, Oded and Ostrovsky, Rafail},
+	Date-Added = {2017-11-14 10:09:59 +0000},
+	Date-Modified = {2017-11-14 10:09:59 +0000},
+	Journal = {Journal of the ACM (JACM)},
+	Number = {3},
+	Pages = {431--473},
+	Publisher = {ACM},
+	Title = {Software protection and simulation on oblivious RAMs},
+	Volume = {43},
+	Year = {1996}}
+
+@inproceedings{chase2010structured,
+	Author = {Chase, Melissa and Kamara, Seny},
+	Booktitle = {International Conference on the Theory and Application of Cryptology and Information Security},
+	Date-Added = {2017-11-14 09:40:37 +0000},
+	Date-Modified = {2017-11-14 09:40:37 +0000},
+	Organization = {Springer},
+	Pages = {577--594},
+	Title = {Structured encryption and controlled disclosure},
+	Year = {2010}}
+
+@incollection{cash2013highly,
+	Author = {Cash, David and Jarecki, Stanislaw and Jutla, Charanjit and Krawczyk, Hugo and Ro{\c{s}}u, Marcel-C{\u{a}}t{\u{a}}lin and Steiner, Michael},
+	Booktitle = {Advances in cryptology--CRYPTO 2013},
+	Date-Added = {2017-11-14 09:12:15 +0000},
+	Date-Modified = {2017-11-14 09:12:30 +0000},
+	Pages = {353--373},
+	Publisher = {Springer},
+	Title = {{Highly-Scalable Searchable Symmetric Encryption with Support for Boolean Queries}},
 	Year = {2013}}
 
-@misc{nytime2012facebook,
-	Author = {The New York Times},
-	Date-Added = {2017-11-08 11:17:07 +0000},
-	Date-Modified = {2017-11-08 11:18:26 +0000},
-	Howpublished = {\\ \url{http://www.nytimes.com/2012/02/05/opinion/sunday/facebook-is-using-you.html?pagewanted=all&_r=2&} [online]},
-	Title = {{Facebook Is Using You}},
+@article{curtmola2011searchable,
+	Author = {Curtmola, Reza and Garay, Juan and Kamara, Seny and Ostrovsky, Rafail},
+	Date-Added = {2017-11-14 08:56:37 +0000},
+	Date-Modified = {2017-11-14 09:11:13 +0000},
+	Journal = {Journal of Computer Security},
+	Number = {5},
+	Pages = {895--934},
+	Publisher = {IOS Press},
+	Title = {{Searchable Symmetric Encryption: Improved Definitions and Efficient Constructions}},
+	Volume = {19},
+	Year = {2011}}
+
+@article{goh2003secure,
+	Author = {Goh, Eu-Jin and others},
+	Date-Added = {2017-11-14 08:50:00 +0000},
+	Date-Modified = {2017-11-14 08:50:13 +0000},
+	Journal = {IACR Cryptology ePrint Archive},
+	Pages = {216},
+	Title = {{Secure Indexes.}},
+	Volume = {2003},
+	Year = {2003}}
+
+@inproceedings{song2000practical,
+	Author = {Song, Dawn Xiaoding and Wagner, David and Perrig, Adrian},
+	Booktitle = {Security and Privacy, 2000. S\&amp;P 2000. Proceedings. 2000 IEEE Symposium on},
+	Date-Added = {2017-11-14 08:43:26 +0000},
+	Date-Modified = {2017-11-14 08:46:54 +0000},
+	Organization = {IEEE},
+	Pages = {44--55},
+	Title = {{Practical Techniques for Searches on Encrypted Data}},
+	Year = {2000}}
+
+@article{curtiss2013unicorn,
+	Author = {Curtiss, Michael and Becker, Iain and Bosman, Tudor and Doroshenko, Sergey and Grijincu, Lucian and Jackson, Tom and Kunnatur, Sandhya and Lassen, Soren and Pronin, Philip and Sankar, Sriram and others},
+	Date-Added = {2017-11-13 12:44:46 +0000},
+	Date-Modified = {2017-11-13 12:45:00 +0000},
+	Journal = {Proceedings of the VLDB Endowment},
+	Number = {11},
+	Pages = {1150--1161},
+	Publisher = {VLDB Endowment},
+	Title = {{Unicorn: A System for Searching the Social Graph}},
+	Volume = {6},
+	Year = {2013}}
+
+@misc{mori2010nudge,
+	Author = {Dyian Mori},
+	Date-Added = {2017-11-13 10:59:31 +0000},
+	Date-Modified = {2017-11-13 11:00:28 +0000},
+	Howpublished = {\\ \url{http://thetartan.org/2010/3/22/scitech/privacynudges} [online]},
+	Month = {May},
+	Title = {Privacy nudges protect information},
+	Year = {2010}}
+
+@article{narayanan2012critical,
+	Author = {Narayanan, Arvind and Toubiana, Vincent and Barocas, Solon and Nissenbaum, Helen and Boneh, Dan},
+	Date-Added = {2017-11-13 10:42:37 +0000},
+	Date-Modified = {2017-11-13 10:42:57 +0000},
+	Journal = {arXiv preprint arXiv:1202.4503},
+	Title = {{A Critical Look at Decentralized Personal Data Architectures}},
 	Year = {2012}}
+
+@inproceedings{liu2011confidant,
+	Author = {Liu, Dongtao and Shakimov, Amre and C{\'a}ceres, Ram{\'o}n and Varshavsky, Alexander and Cox, Landon P},
+	Booktitle = {Proceedings of the 12th International Middleware Conference},
+	Date-Added = {2017-11-13 08:04:41 +0000},
+	Date-Modified = {2017-11-13 08:05:05 +0000},
+	Organization = {International Federation for Information Processing},
+	Pages = {60--79},
+	Title = {{Confidant: Protecting OSN Data without Locking It Up}},
+	Year = {2011}}
+
+@misc{diaspora2017diaspora,
+	Author = {Diaspora Project},
+	Date-Added = {2017-11-13 07:51:33 +0000},
+	Date-Modified = {2017-11-13 07:53:08 +0000},
+	Howpublished = {\\ \url{https://diasporafoundation.org} [online]},
+	Title = {diaspora*}}
+
+@inproceedings{buchegger2009peerson,
+	Author = {Buchegger, Sonja and Schi{\"o}berg, Doris and Vu, Le-Hung and Datta, Anwitaman},
+	Booktitle = {Proceedings of the Second ACM EuroSys Workshop on Social Network Systems},
+	Date-Added = {2017-11-13 04:58:15 +0000},
+	Date-Modified = {2017-11-13 04:58:15 +0000},
+	Organization = {ACM},
+	Pages = {46--52},
+	Title = {PeerSoN: P2P social networking: early experiences and insights},
+	Year = {2009}}
+
+@inproceedings{jahid2011easier,
+	Author = {Jahid, Sonia and Mittal, Prateek and Borisov, Nikita},
+	Booktitle = {Proceedings of the 6th ACM Symposium on Information, Computer and Communications Security},
+	Date-Added = {2017-11-13 04:06:01 +0000},
+	Date-Modified = {2017-11-13 04:06:22 +0000},
+	Organization = {ACM},
+	Pages = {411--415},
+	Title = {{EASiER: Encryption-based Access Control in Social Networks with Efficient Revocation}},
+	Year = {2011}}
+
+@inproceedings{meng2015grecs,
+	Author = {Meng, Xianrui and Kamara, Seny and Nissim, Kobbi and Kollios, George},
+	Booktitle = {Proceedings of the 22nd ACM SIGSAC Conference on Computer and Communications Security},
+	Date-Added = {2017-11-12 03:20:39 +0000},
+	Date-Modified = {2017-11-12 03:20:56 +0000},
+	Organization = {ACM},
+	Pages = {504--517},
+	Title = {{GRECS: Graph Encryption for Approximate Shortest Distance Queries}},
+	Year = {2015}}
+
+@misc{itstat2017population,
+	Author = {Internet World Stats},
+	Date-Added = {2017-11-10 05:40:50 +0000},
+	Date-Modified = {2017-11-13 11:44:49 +0000},
+	Howpublished = {\\ \url{http://www.internetworldstats.com/stats.htm} [online]},
+	Title = {World Internet Usage and Population Statistics},
+	Year = {2017}}
+
+@misc{statista2017facebook,
+	Author = {Statista},
+	Date-Added = {2017-11-10 04:38:16 +0000},
+	Date-Modified = {2017-11-10 04:39:20 +0000},
+	Howpublished = {\\ \url{https://www.statista.com/statistics/264810/number-of-monthly-active-facebook-users-worldwide/} [online]},
+	Title = {Number of monthly active Facebook users worldwide as of 3rd quarter 2017},
+	Year = {2017}}
+
+@inproceedings{nilizadeh2012cachet,
+	Author = {Nilizadeh, Shirin and Jahid, Sonia and Mittal, Prateek and Borisov, Nikita and Kapadia, Apu},
+	Booktitle = {Proceedings of the 8th international conference on Emerging networking experiments and technologies},
+	Date-Added = {2017-11-10 01:07:52 +0000},
+	Date-Modified = {2017-11-10 01:08:51 +0000},
+	Organization = {ACM},
+	Pages = {337--348},
+	Title = {{Cachet: A Decentralized Architecture for Privacy Preserving Social Networking with Caching}},
+	Year = {2012}}
+
+@inproceedings{feldman2012social,
+	Author = {Feldman, Ariel J and Blankstein, Aaron and Freedman, Michael J and Felten, Edward W},
+	Booktitle = {USENIX Security Symposium},
+	Date-Added = {2017-11-10 01:04:08 +0000},
+	Date-Modified = {2017-11-10 01:04:30 +0000},
+	Pages = {647--662},
+	Title = {{Social Networking with Frientegrity: Privacy and Integrity with an Untrusted Provider.}},
+	Year = {2012}}
+
+@inproceedings{backes2011security,
+	Author = {Backes, Michael and Maffei, Matteo and Pecina, Kim},
+	Booktitle = {NDSS},
+	Date-Added = {2017-11-10 00:43:25 +0000},
+	Date-Modified = {2017-11-10 00:43:41 +0000},
+	Pages = {35--51},
+	Title = {{A Security API for Distributed Social Networks}},
+	Volume = {11},
+	Year = {2011}}
 
 @article{mcpherson2001birds,
 	Author = {McPherson, Miller and Smith-Lovin, Lynn and Cook, James M},
@@ -89,9 +268,9 @@
 
 @inproceedings{tootoonchian2009lockr,
 	Author = {Tootoonchian, Amin and Saroiu, Stefan and Ganjali, Yashar and Wolman, Alec},
-	Booktitle = {Proceedings of the 5th international conference on Emerging networking experiments and technologies},
+	Booktitle = {Proceedings of the 5th International Conference on Emerging Networking Experiments and Technologies},
 	Date-Added = {2017-11-06 00:30:01 +0000},
-	Date-Modified = {2017-11-06 05:27:41 +0000},
+	Date-Modified = {2017-11-10 00:45:57 +0000},
 	Organization = {ACM},
 	Pages = {169--180},
 	Title = {{Lockr: Better Privacy for Social Networks}},
