--- a/report.tex
+++ b/report.tex
@@ -18,6 +18,7 @@
 \include{data/introduction}
 \include{data/contribution}
 \include{data/literature}
+\include{data/construction}
 \include{data/progress}
 
 \include{data/reference}
